remove MaxPermSize option